# kuberic

./: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: CI.yml
apps/configmapgen/: Cargo.toml
apps/configmapgen/src/: controller.rs  crd.rs  main.rs  tests.rs
apps/xcontrollers/: Cargo.toml
apps/xcontrollers/src/: main.rs  shared.rs
apps/xcontrollers/src/configmapgen/: controller.rs  crd.rs  mod.rs  tests.rs
apps/xcontrollers/src/podset/: controller.rs  controller_intenals.rs  crd.rs  mod.rs  tests.rs
apps/xdata-app/: CMakeLists.txt  Cargo.toml
apps/xdata-app/deploy/: statefulset.yaml
apps/xdata-app/proto/: helloworld.proto
apps/xdata-app/src/: app.rs  greeter.rs  leader.rs  leader2.rs  leader_rpc.rs  main.rs  storage.rs
apps/xdata-operator/: CMakeLists.txt  Cargo.toml
apps/xdata-operator/deploy/: Dockerfile  README.md  deployment.yaml  xdataapp-crd.yaml  xdataapp-example.yaml
apps/xdata-operator/src/: crd.rs  main.rs  statefulset.rs
deploy/: kind-config.yaml
docs/: Dev.md  XdataApp-QuickStart.md
docs/background/: cloudnative-pg-architecture.md  lazy-repair-replication.md  leaderless-quorum-replication.md  service-fabric-stateful-failover.md
docs/background/service-fabric/: README.md  architecture.md  failover.md  references.md  replication-protocol.md  state-management.md
docs/features/: kubelicate-replicator-design.md  kuberic-replicator-design.md  kv-stateful-design.md  kvstore-design.md  kvstore-k8s-deployment.md  operator-failure-scenarios.md
docs/features/future/: peer-repair-replication.md  wal-persistence.md  writer-based-replication.md
docs/features/kubelicate/: design-gaps.md  operator.md  protocols.md  status.md  testing.md  user-api.md
docs/features/kubelicate/implemented/: runtime-replicator-separation.md  state-provider-separation.md
docs/features/kuberic/: design-gaps.md  operator.md  protocols.md  rolling-upgrade-design.md  status.md  testing.md  user-api.md
docs/features/kuberic/implemented/: state-provider-separation.md
docs/features/postgres/: design.md
docs/features/sqlite/: design.md
docs/features/sqlite-stateful/: design.md
docs/implemented/: kvstore-k8s-deployment.md
examples/echo-stateful/: Cargo.toml
examples/echo-stateful/src/: main.rs
examples/kv-stateful/: Cargo.toml
examples/kv-stateful/src/: demo.rs  lib.rs  main.rs  reconciler_tests.rs  server.rs  service.rs  state.rs  testing.rs  tests.rs
examples/kv-stateful/tests/: operator_basic.rs  operator_failover.rs  operator_replication.rs  reconciler.rs
examples/kvstore/: CMakeLists.txt  Cargo.toml  build.rs
examples/kvstore/deploy/: Dockerfile  kubelicateset.yaml  kubericset.yaml  nodeport-svc.yaml
examples/kvstore/proto/: kvstore.proto
examples/kvstore/src/: demo.rs  lib.rs  main.rs  persistence.rs  server.rs  service.rs  state.rs  testing.rs
examples/kvstore/tests/: operator_basic.rs  operator_failover.rs  operator_replication.rs  reconciler.rs
examples/postgres/: Cargo.toml  build.rs
examples/postgres/proto/: pgdata.proto
examples/postgres/src/: adapter.rs  config.rs  data_service.rs  instance.rs  lib.rs  main.rs  monitor.rs  service.rs  testing.rs
examples/postgres/tests/: instance_basic.rs  operator_basic.rs  operator_failover.rs  operator_switchover.rs
examples/sqlite/: Cargo.toml  build.rs
examples/sqlite/proto/: sqlitestore.proto
examples/sqlite/src/: demo.rs  framelog.rs  frames.rs  lib.rs  main.rs  server.rs  service.rs  state.rs  testing.rs
examples/sqlite/tests/: operator_basic.rs  operator_failover.rs  operator_replication.rs
kubelicate-core/: Cargo.toml  build.rs
kubelicate-core/proto/: kubelicate.proto
kubelicate-core/src/: driver.rs  error.rs  events.rs  handles.rs  lib.rs  noop.rs  pod.rs  runtime.rs  types.rs
kubelicate-core/src/grpc/: convert.rs  e2e_tests.rs  handle.rs  mod.rs  server.rs
kubelicate-core/src/replicator/: actor.rs  copy.rs  mod.rs  primary.rs  queue.rs  quorum.rs  secondary.rs
kubelicate-data/: Cargo.toml
kubelicate-operator/: CMakeLists.txt  Cargo.toml
kubelicate-operator/deploy/: Dockerfile  deployment.yaml
kubelicate-operator/src/: cluster_api.rs  crd.rs  lib.rs  main.rs  reconciler.rs  tests.rs
kubelicate-shared/: Cargo.toml
kubelicate-shared/src/: kube_util.rs
kubelicate-tests/: Cargo.toml
kubelicate-tests/src/: kvstore_k8s.rs  lease_election.rs  lib.rs  tests.rs
kuberic-core/: Cargo.toml  README.md  build.rs
kuberic-core/proto/: kuberic.proto
kuberic-core/src/: driver.rs  error.rs  events.rs  handles.rs  lib.rs  noop.rs  pod.rs  runtime.rs  types.rs
kuberic-core/src/grpc/: convert.rs  handle.rs  mod.rs  server.rs
kuberic-core/src/replicator/: actor.rs  copy.rs  mod.rs  primary.rs  quorum.rs  secondary.rs
kuberic-operator/: CMakeLists.txt  Cargo.toml  README.md
kuberic-operator/deploy/: Dockerfile  deployment.yaml
kuberic-operator/src/: cluster_api.rs  crd.rs  lib.rs  main.rs  reconciler.rs
kuberic-tests/: Cargo.toml
kuberic-tests/src/: kvstore_k8s.rs  lib.rs
scripts/: image_equal.sh
xedio-data/src/: lib.rs
xedio-data/src/utils/: mod.rs
xedio-shared/: Cargo.toml
xedio-shared/src/: kube_util.rs  lib.rs
xedio-tests/: Cargo.toml
xedio-tests/src/: lib.rs  tests.rs
