[workspace]
resolver = "2"
members = [
  "examples/kvstore",
  "examples/sqlite",
  "kuberic-core",
  "kuberic-operator",
  "kuberic-tests",
]

[workspace.dependencies]
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
serde = "1"
serde_json = "1"
tracing = "0.1"
tonic = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tracing-subscriber = "0.3"
kube = { version = "3", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }
rand = "0.10"
schemars = "1"
test-log = { version = "0.2", default-features = false, features = ["trace"] }

# example deps
anyhow = "1"
thiserror = "2"
