[workspace]
resolver = "2"
members = [
  "examples/kvstore",
  "examples/sqlite",
  "kuberic-core",
  "kuberic-operator",
  "kuberic-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/youyuanwu/kuberic"
description = "Stateful replication framework for Kubernetes"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
kube = { version = "3", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }
schemars = "1"
thiserror = "2"
anyhow = "1"
rand = "0.10"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.39", features = ["bundled", "hooks"] }
crc32fast = "1"
serial_test = "3.4.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
kube-lease-manager = "0.11.1"
kube-leader-election = "0.43.0"
