[package]
name = "kubelicate-operator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kubelicate-operator"
path = "src/main.rs"

[dependencies]
kubelicate-core = { path = "../kubelicate-core" }
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
kubelicate-core = { path = "../kubelicate-core", features = ["testing"] }
