[package]
name = "kubelicate-tests"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
tokio.workspace = true
kubelicate-data.workspace = true
kubelicate-shared.workspace = true
tonic.workspace = true
prost.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
test-log.workspace = true
tracing.workspace = true
serde_json.workspace = true
kvstore = { path = "../examples/kvstore" }