[package]
name = "kuberic-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core replication framework for kuberic — quorum replication, failover, epoch fencing"
readme = "README.md"

[features]
testing = []

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tokio-stream.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
