[package]
name = "kuberic-operator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kuberic-operator"
path = "src/main.rs"

[dependencies]
kuberic-core = { path = "../kuberic-core" }
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
kuberic-core = { path = "../kuberic-core", features = ["testing"] }
