[package]
name = "kuberic-operator"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Kubernetes operator for kuberic — manages KubericSet CRDs, pod lifecycle, and failover"
readme = "README.md"
publish = false

[[bin]]
name = "kuberic-operator"
path = "src/main.rs"

[dependencies]
kuberic-core = { path = "../kuberic-core" }
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
kuberic-core = { path = "../kuberic-core", features = ["testing"] }
