[package]
name = "kuberic-tests"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
test-log.workspace = true
tracing.workspace = true
serde_json.workspace = true
kube-lease-manager = "0.11.1"
kube-leader-election = "0.43.0"
rand.workspace = true
tokio-util = "0.7"
kvstore = { path = "../examples/kvstore" }