[package]
name = "kuberic-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]

[dev-dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
test-log.workspace = true
tracing.workspace = true
serde_json.workspace = true
kube-lease-manager.workspace = true
kube-leader-election.workspace = true
rand.workspace = true
tokio-util.workspace = true
kvstore = { path = "../examples/kvstore" }