[package]
name = "xedio-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tokio.workspace = true
tracing.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
serde_yaml.workspace = true

[build-dependencies]
tonic-prost-build = "0.14"