[package]
name = "xcontrollers"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
xedio-shared.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
test-log.workspace = true 