[package]
name = "xdata-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
kuberator.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
xedio-data.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true