[package]
name = "xdata-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
xedio-shared.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true