[package]
name = "echo-stateful"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "echo-stateful"
path = "src/main.rs"

[dependencies]
kubelicate-core = { path = "../../kubelicate-core" }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
clap = { version = "4", features = ["derive"] }
