[package]
name = "kv-stateful"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kv-stateful"
path = "src/main.rs"

[dependencies]
kubelicate-core = { path = "../../kubelicate-core" }
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-prost-build.workspace = true
