[package]
name = "sqlite-replicated"
version.workspace = true
edition.workspace = true
publish = false

[features]
testing = []

[[bin]]
name = "sqlite-replicated"
path = "src/main.rs"

[dependencies]
kuberic-core = { path = "../../kuberic-core" }
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
clap.workspace = true
rusqlite.workspace = true
crc32fast.workspace = true

[dev-dependencies]
test-log.workspace = true
sqlite-replicated = { path = ".", features = ["testing"] }
kuberic-operator = { path = "../../kuberic-operator" }
k8s-openapi.workspace = true
kube.workspace = true
async-trait.workspace = true
serial_test.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
